Assigned sounds to powerup and weapon pickup actors.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.11-20.55.28
+CoopGame.TimeStamp=2020.05.11-21.39.52
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4838,10 +4838,42 @@ REINST_BP_MachineGun_AI_C_27.Actor=True
 EditorKeyboardShortcutSettings.AnimNotifyPanel=True
 EditorKeyboardShortcutSettings.AnimationEditor=True
 EditorKeyboardShortcutSettings.AnimSequenceEditor=True
+BP_SuperSpeedPowerup_C.Materials=True
+BP_SuperSpeedPowerup_C.Light=True
+BP_SuperSpeedPowerup_C.ComponentTick=True
+BP_SuperSpeedPowerup_C.Light Profiles=True
+BP_SuperSpeedPowerup_C.Lightmass=True
+BP_SuperSpeedPowerup_C.Performance=True
+BP_SuperSpeedPowerup_C.LightFunction=True
+BP_SuperSpeedPowerup_C.DistanceFieldShadows=True
+BP_SuperSpeedPowerup_C.RayTracing=True
+BP_TestPickup_C.Weapon=True
+BP_WeaponPickup_C.Weapon=True
+BP_PowerupPickup_C.ComponentTick=True
+BP_PowerupPickup_C.Weapon=True
+REINST_BP_PowerupPickup_C_27.Tick=True
+REINST_BP_PowerupPickup_C_27.Weapon=True
+REINST_BP_PowerupPickup_C_27.Rendering=True
+REINST_BP_PowerupPickup_C_27.Replication=True
+REINST_BP_PowerupPickup_C_27.Input=True
+REINST_BP_PowerupPickup_C_27.Actor=True
+REINST_BP_WeaponPickup_C_61.Tick=True
+REINST_BP_WeaponPickup_C_61.Weapon=True
+REINST_BP_WeaponPickup_C_61.Rendering=True
+REINST_BP_WeaponPickup_C_61.Replication=True
+REINST_BP_WeaponPickup_C_61.Input=True
+REINST_BP_WeaponPickup_C_61.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Objects/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup
+OpenAssetsAtExit=/Game/Objects/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup
+OpenAssetsAtExit=/Game/Objects/Powerups/Pickup/BP_TestPickup.BP_TestPickup
+OpenAssetsAtExit=/Game/Objects/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup
+OpenAssetsAtExit=/Game/Objects/Powerups/Pickup/BP_PowerupPickup.BP_PowerupPickup
+OpenAssetsAtExit=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue.powerupPickup_Cue
+OpenAssetsAtExit=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue.Pickup_weapon_Cue
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4874,7 +4906,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Objects/Characters/Animations
+ContentBrowserTab1.SelectedPaths=/Game/Objects/Powerups/SoundEffects
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5233,26 +5265,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem1=/Game/Objects/Characters/Animations/AnimStarterPack/Reload_Rifle_Hip
-MRUItem2=/Game/Objects/Characters/Animations/AnimStarterPack/Fire_Shotgun_Hip
-MRUItem3=/Game/Objects/Characters/Animations/AnimStarterPack/Hit_React_1
-MRUItem4=/Game/Objects/Characters/Animations/BP_CharacterAnimation
-MRUItem5=/Game/Objects/Characters/AIPlayer/Task_AttackTarget
-MRUItem6=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
-MRUItem7=/Game/Objects/Characters/AIPlayer/Service_SelectATargetActor
-MRUItem8=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem9=/Game/Objects/Weapons/BP_Shotgun
-MRUItem10=/Game/Objects/Weapons/BP_Rifle
-MRUItem11=/Game/Objects/Weapons/BP_MachineGun
-MRUItem12=/Game/Objects/Weapons/BP_GrenadeLaucnher
-MRUItem13=/Game/Objects/Weapons/Sounds/magazine_empty_Cue
-MRUItem14=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem15=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue
-MRUItem16=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue
-MRUItem17=/Game/Objects/Characters/Sounds/Jog-loop_Cue
-MRUItem18=/Game/Objects/Characters/BP_AIPlayer
-MRUItem19=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem0=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
+MRUItem1=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
+MRUItem2=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
+MRUItem3=/Game/Objects/Powerups/Pickup/BP_PowerupPickup
+MRUItem4=/Game/Objects/Powerups/Pickup/BP_TestPickup
+MRUItem5=/Game/Objects/Powerups/BP_SuperSpeedPowerup
+MRUItem6=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
+MRUItem7=/Game/Objects/Powerups/SoundEffects/Pickup_powerup
+MRUItem8=/Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem9=/Game/Objects/Characters/Animations/AnimStarterPack/Reload_Rifle_Hip
+MRUItem10=/Game/Objects/Characters/Animations/AnimStarterPack/Fire_Shotgun_Hip
+MRUItem11=/Game/Objects/Characters/Animations/AnimStarterPack/Hit_React_1
+MRUItem12=/Game/Objects/Characters/Animations/BP_CharacterAnimation
+MRUItem13=/Game/Objects/Characters/AIPlayer/Task_AttackTarget
+MRUItem14=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem15=/Game/Objects/Characters/AIPlayer/Service_SelectATargetActor
+MRUItem16=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem17=/Game/Objects/Weapons/BP_Shotgun
+MRUItem18=/Game/Objects/Weapons/BP_Rifle
+MRUItem19=/Game/Objects/Weapons/BP_MachineGun
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5368,6 +5400,7 @@ MRUItem19=/Game/Objects/TrackerBot/BP_TrackerBot
 /Game/Objects/Characters/Animations/AnimStarterPack/Reload_Rifle_Hip.Reload_Rifle_Hip=0
 /Game/Objects/Characters/Animations/BP_CharacterAnimation.BP_CharacterAnimation=0
 /Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint=0
+/Game/Objects/Powerups/SoundEffects/Pickup_powerup.Pickup_powerup=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
