--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4863,17 +4863,17 @@ REINST_BP_WeaponPickup_C_61.Rendering=True
 REINST_BP_WeaponPickup_C_61.Replication=True
 REINST_BP_WeaponPickup_C_61.Input=True
 REINST_BP_WeaponPickup_C_61.Actor=True
+EditorKeyboardShortcutSettings.StaticMeshViewportLODCmd=True
+EditorKeyboardShortcutSettings.StaticMeshEditor=True
+EditorKeyboardShortcutSettings.TextureEditor=True
+TextureEditorSettings.Background=True
+TextureEditorSettings.TextureBorder=True
+EditorKeyboardShortcutSettings.Cascade=True
+EditorKeyboardShortcutSettings.CurveEditor=True
 
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Objects/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup
-OpenAssetsAtExit=/Game/Objects/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup
-OpenAssetsAtExit=/Game/Objects/Powerups/Pickup/BP_TestPickup.BP_TestPickup
-OpenAssetsAtExit=/Game/Objects/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup
-OpenAssetsAtExit=/Game/Objects/Powerups/Pickup/BP_PowerupPickup.BP_PowerupPickup
-OpenAssetsAtExit=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue.powerupPickup_Cue
-OpenAssetsAtExit=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue.Pickup_weapon_Cue
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4906,7 +4906,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Objects/Powerups/SoundEffects
+ContentBrowserTab1.SelectedPaths=/Game/Objects/Weapons
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5265,26 +5265,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
-MRUItem1=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
-MRUItem2=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
-MRUItem3=/Game/Objects/Powerups/Pickup/BP_PowerupPickup
-MRUItem4=/Game/Objects/Powerups/Pickup/BP_TestPickup
-MRUItem5=/Game/Objects/Powerups/BP_SuperSpeedPowerup
-MRUItem6=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
-MRUItem7=/Game/Objects/Powerups/SoundEffects/Pickup_powerup
-MRUItem8=/Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem9=/Game/Objects/Characters/Animations/AnimStarterPack/Reload_Rifle_Hip
-MRUItem10=/Game/Objects/Characters/Animations/AnimStarterPack/Fire_Shotgun_Hip
-MRUItem11=/Game/Objects/Characters/Animations/AnimStarterPack/Hit_React_1
-MRUItem12=/Game/Objects/Characters/Animations/BP_CharacterAnimation
-MRUItem13=/Game/Objects/Characters/AIPlayer/Task_AttackTarget
-MRUItem14=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
-MRUItem15=/Game/Objects/Characters/AIPlayer/Service_SelectATargetActor
-MRUItem16=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem17=/Game/Objects/Weapons/BP_Shotgun
-MRUItem18=/Game/Objects/Weapons/BP_Rifle
-MRUItem19=/Game/Objects/Weapons/BP_MachineGun
+MRUItem0=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
+MRUItem1=/Game/Objects/Powerups/VisualEffects/sunflare
+MRUItem2=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
+MRUItem3=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
+MRUItem4=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
+MRUItem5=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
+MRUItem6=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
+MRUItem7=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
+MRUItem8=/Game/Objects/Powerups/Pickup/BP_PowerupPickup
+MRUItem9=/Game/Objects/Powerups/Pickup/BP_TestPickup
+MRUItem10=/Game/Objects/Powerups/BP_SuperSpeedPowerup
+MRUItem11=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
+MRUItem12=/Game/Objects/Powerups/SoundEffects/Pickup_powerup
+MRUItem13=/Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem14=/Game/Objects/Characters/Animations/AnimStarterPack/Reload_Rifle_Hip
+MRUItem15=/Game/Objects/Characters/Animations/AnimStarterPack/Fire_Shotgun_Hip
+MRUItem16=/Game/Objects/Characters/Animations/AnimStarterPack/Hit_React_1
+MRUItem17=/Game/Objects/Characters/Animations/BP_CharacterAnimation
+MRUItem18=/Game/Objects/Characters/AIPlayer/Task_AttackTarget
+MRUItem19=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5401,6 +5401,11 @@ MRUItem19=/Game/Objects/Weapons/BP_MachineGun
 /Game/Objects/Characters/Animations/BP_CharacterAnimation.BP_CharacterAnimation=0
 /Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint=0
 /Game/Objects/Powerups/SoundEffects/Pickup_powerup.Pickup_powerup=0
+/Game/Objects/Powerups/VisualEffects/S_SandSwirl.S_SandSwirl=0
+/Game/Objects/Powerups/VisualEffects/T_Flame_Tile.T_Flame_Tile=0
+/Game/Objects/Powerups/VisualEffects/T_Fire_tile.T_Fire_tile=0
+/Game/Objects/Powerups/VisualEffects/sunflare.sunflare=0
+/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura.P_gold_ore_aura=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
