Imprved grenade launcher.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.12-01.12.20
+CoopGame.TimeStamp=2020.05.12-01.16.10
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4870,10 +4870,98 @@ TextureEditorSettings.Background=True
 TextureEditorSettings.TextureBorder=True
 EditorKeyboardShortcutSettings.Cascade=True
 EditorKeyboardShortcutSettings.CurveEditor=True
+REINST_BP_GrenadeProjectile_C_57.Sockets=True
+REINST_BP_GrenadeProjectile_C_57.Events=True
+REINST_BP_GrenadeProjectile_C_61.Variable=True
+REINST_BP_GrenadeProjectile_C_61.Sockets=True
+REINST_BP_GrenadeProjectile_C_61.Projectile=True
+REINST_BP_GrenadeProjectile_C_61.ProjectileBounces=True
+REINST_BP_GrenadeProjectile_C_61.ProjectileSimulation=True
+REINST_BP_GrenadeProjectile_C_61.Homing=True
+REINST_BP_GrenadeProjectile_C_61.ProjectileInterpolation=True
+REINST_BP_GrenadeProjectile_C_61.Velocity=True
+REINST_BP_GrenadeProjectile_C_61.PlanarMovement=True
+REINST_BP_GrenadeProjectile_C_61.MovementComponent=True
+REINST_BP_GrenadeProjectile_C_61.Tags=True
+REINST_BP_GrenadeProjectile_C_61.ComponentReplication=True
+REINST_BP_GrenadeProjectile_C_61.Activation=True
+REINST_BP_GrenadeProjectile_C_61.Cooking=True
+REINST_BP_GrenadeProjectile_C_61.Events=True
+REINST_BP_GrenadeProjectile_C_65.Variable=True
+REINST_BP_GrenadeProjectile_C_65.Sockets=True
+REINST_BP_GrenadeProjectile_C_65.Projectile=True
+REINST_BP_GrenadeProjectile_C_65.ProjectileBounces=True
+REINST_BP_GrenadeProjectile_C_65.ProjectileSimulation=True
+REINST_BP_GrenadeProjectile_C_65.Homing=True
+REINST_BP_GrenadeProjectile_C_65.ProjectileInterpolation=True
+REINST_BP_GrenadeProjectile_C_65.Velocity=True
+REINST_BP_GrenadeProjectile_C_65.PlanarMovement=True
+REINST_BP_GrenadeProjectile_C_65.MovementComponent=True
+REINST_BP_GrenadeProjectile_C_65.Tags=True
+REINST_BP_GrenadeProjectile_C_65.ComponentReplication=True
+REINST_BP_GrenadeProjectile_C_65.Activation=True
+REINST_BP_GrenadeProjectile_C_65.Cooking=True
+REINST_BP_GrenadeProjectile_C_65.Events=True
+REINST_BP_GrenadeProjectile_C_69.Variable=True
+REINST_BP_GrenadeProjectile_C_69.Sockets=True
+REINST_BP_GrenadeProjectile_C_69.Projectile=True
+REINST_BP_GrenadeProjectile_C_69.ProjectileBounces=True
+REINST_BP_GrenadeProjectile_C_69.ProjectileSimulation=True
+REINST_BP_GrenadeProjectile_C_69.Homing=True
+REINST_BP_GrenadeProjectile_C_69.ProjectileInterpolation=True
+REINST_BP_GrenadeProjectile_C_69.Velocity=True
+REINST_BP_GrenadeProjectile_C_69.PlanarMovement=True
+REINST_BP_GrenadeProjectile_C_69.MovementComponent=True
+REINST_BP_GrenadeProjectile_C_69.Tags=True
+REINST_BP_GrenadeProjectile_C_69.ComponentReplication=True
+REINST_BP_GrenadeProjectile_C_69.Activation=True
+REINST_BP_GrenadeProjectile_C_69.Cooking=True
+REINST_BP_GrenadeProjectile_C_69.Events=True
+REINST_BP_GrenadeProjectile_C_73.Variable=True
+REINST_BP_GrenadeProjectile_C_73.Sockets=True
+REINST_BP_GrenadeProjectile_C_73.Projectile=True
+REINST_BP_GrenadeProjectile_C_73.ProjectileBounces=True
+REINST_BP_GrenadeProjectile_C_73.ProjectileSimulation=True
+REINST_BP_GrenadeProjectile_C_73.Homing=True
+REINST_BP_GrenadeProjectile_C_73.ProjectileInterpolation=True
+REINST_BP_GrenadeProjectile_C_73.Velocity=True
+REINST_BP_GrenadeProjectile_C_73.PlanarMovement=True
+REINST_BP_GrenadeProjectile_C_73.MovementComponent=True
+REINST_BP_GrenadeProjectile_C_73.Tags=True
+REINST_BP_GrenadeProjectile_C_73.ComponentReplication=True
+REINST_BP_GrenadeProjectile_C_73.Activation=True
+REINST_BP_GrenadeProjectile_C_73.Cooking=True
+REINST_BP_GrenadeProjectile_C_73.Events=True
+REINST_BP_GrenadeProjectile_C_77.Variable=True
+REINST_BP_GrenadeProjectile_C_77.Sockets=True
+REINST_BP_GrenadeProjectile_C_77.Projectile=True
+REINST_BP_GrenadeProjectile_C_77.ProjectileBounces=True
+REINST_BP_GrenadeProjectile_C_77.ProjectileSimulation=True
+REINST_BP_GrenadeProjectile_C_77.Homing=True
+REINST_BP_GrenadeProjectile_C_77.ProjectileInterpolation=True
+REINST_BP_GrenadeProjectile_C_77.Velocity=True
+REINST_BP_GrenadeProjectile_C_77.PlanarMovement=True
+REINST_BP_GrenadeProjectile_C_77.MovementComponent=True
+REINST_BP_GrenadeProjectile_C_77.Tags=True
+REINST_BP_GrenadeProjectile_C_77.ComponentReplication=True
+REINST_BP_GrenadeProjectile_C_77.Activation=True
+REINST_BP_GrenadeProjectile_C_77.Cooking=True
+REINST_BP_GrenadeProjectile_C_77.Events=True
+REINST_BP_GrenadeProjectile_C_81.Tick=True
+REINST_BP_GrenadeProjectile_C_81.Explosion=True
+REINST_BP_GrenadeProjectile_C_81.Projectile=True
+REINST_BP_GrenadeProjectile_C_81.Destruction=True
+REINST_BP_GrenadeProjectile_C_81.Rendering=True
+REINST_BP_GrenadeProjectile_C_81.Replication=True
+REINST_BP_GrenadeProjectile_C_81.Input=True
+REINST_BP_GrenadeProjectile_C_81.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Objects/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher
+OpenAssetsAtExit=/Game/Objects/Weapons/BP_Shotgun.BP_Shotgun
+OpenAssetsAtExit=/Game/Objects/Projectiles/BP_GrenadeProjectile.BP_GrenadeProjectile
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4906,7 +4994,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Objects/Weapons
+ContentBrowserTab1.SelectedPaths=/Game/Objects/Projectiles
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5265,26 +5353,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
-MRUItem1=/Game/Objects/Powerups/VisualEffects/sunflare
-MRUItem2=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
-MRUItem3=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
-MRUItem4=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
-MRUItem5=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
-MRUItem6=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
-MRUItem7=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
-MRUItem8=/Game/Objects/Powerups/Pickup/BP_PowerupPickup
-MRUItem9=/Game/Objects/Powerups/Pickup/BP_TestPickup
-MRUItem10=/Game/Objects/Powerups/BP_SuperSpeedPowerup
-MRUItem11=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
-MRUItem12=/Game/Objects/Powerups/SoundEffects/Pickup_powerup
-MRUItem13=/Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem14=/Game/Objects/Characters/Animations/AnimStarterPack/Reload_Rifle_Hip
-MRUItem15=/Game/Objects/Characters/Animations/AnimStarterPack/Fire_Shotgun_Hip
-MRUItem16=/Game/Objects/Characters/Animations/AnimStarterPack/Hit_React_1
-MRUItem17=/Game/Objects/Characters/Animations/BP_CharacterAnimation
-MRUItem18=/Game/Objects/Characters/AIPlayer/Task_AttackTarget
-MRUItem19=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem0=/Game/Objects/Projectiles/BP_GrenadeProjectile
+MRUItem1=/Game/Objects/Weapons/BP_Shotgun
+MRUItem2=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem3=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
+MRUItem4=/Game/Objects/Powerups/VisualEffects/sunflare
+MRUItem5=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
+MRUItem6=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
+MRUItem7=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
+MRUItem8=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
+MRUItem9=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
+MRUItem10=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
+MRUItem11=/Game/Objects/Powerups/Pickup/BP_PowerupPickup
+MRUItem12=/Game/Objects/Powerups/Pickup/BP_TestPickup
+MRUItem13=/Game/Objects/Powerups/BP_SuperSpeedPowerup
+MRUItem14=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
+MRUItem15=/Game/Objects/Powerups/SoundEffects/Pickup_powerup
+MRUItem16=/Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem17=/Game/Objects/Characters/Animations/AnimStarterPack/Reload_Rifle_Hip
+MRUItem18=/Game/Objects/Characters/Animations/AnimStarterPack/Fire_Shotgun_Hip
+MRUItem19=/Game/Objects/Characters/Animations/AnimStarterPack/Hit_React_1
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
