Changed collision channel for the explosive barrel.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.12-01.16.10
+CoopGame.TimeStamp=2020.05.12-02.42.49
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4955,13 +4955,97 @@ REINST_BP_GrenadeProjectile_C_81.Rendering=True
 REINST_BP_GrenadeProjectile_C_81.Replication=True
 REINST_BP_GrenadeProjectile_C_81.Input=True
 REINST_BP_GrenadeProjectile_C_81.Actor=True
+REINST_BP_ExplosiveBarrel_C_61.Variable=True
+REINST_BP_ExplosiveBarrel_C_61.TransformCommon=True
+REINST_BP_ExplosiveBarrel_C_61.Sockets=True
+REINST_BP_ExplosiveBarrel_C_61.StaticMesh=True
+REINST_BP_ExplosiveBarrel_C_61.Materials=True
+REINST_BP_ExplosiveBarrel_C_61.Physics=True
+REINST_BP_ExplosiveBarrel_C_61.Collision=True
+REINST_BP_ExplosiveBarrel_C_61.Lighting=True
+REINST_BP_ExplosiveBarrel_C_61.Rendering=True
+REINST_BP_ExplosiveBarrel_C_61.Tags=True
+REINST_BP_ExplosiveBarrel_C_61.ComponentReplication=True
+REINST_BP_ExplosiveBarrel_C_61.Cooking=True
+REINST_BP_ExplosiveBarrel_C_61.Events=True
+REINST_BP_ExplosiveBarrel_C_69.Variable=True
+REINST_BP_ExplosiveBarrel_C_69.TransformCommon=True
+REINST_BP_ExplosiveBarrel_C_69.Sockets=True
+REINST_BP_ExplosiveBarrel_C_69.StaticMesh=True
+REINST_BP_ExplosiveBarrel_C_69.Materials=True
+REINST_BP_ExplosiveBarrel_C_69.Physics=True
+REINST_BP_ExplosiveBarrel_C_69.Collision=True
+REINST_BP_ExplosiveBarrel_C_69.Lighting=True
+REINST_BP_ExplosiveBarrel_C_69.Rendering=True
+REINST_BP_ExplosiveBarrel_C_69.Tags=True
+REINST_BP_ExplosiveBarrel_C_69.ComponentReplication=True
+REINST_BP_ExplosiveBarrel_C_69.Cooking=True
+REINST_BP_ExplosiveBarrel_C_69.Events=True
+REINST_BP_ExplosiveBarrel_C_73.TransformCommon=True
+REINST_BP_ExplosiveBarrel_C_73.StaticMesh=True
+REINST_BP_ExplosiveBarrel_C_73.Materials=True
+REINST_BP_ExplosiveBarrel_C_73.Physics=True
+REINST_BP_ExplosiveBarrel_C_73.Collision=True
+REINST_BP_ExplosiveBarrel_C_73.Lighting=True
+REINST_BP_ExplosiveBarrel_C_73.Rendering=True
+REINST_BP_ExplosiveBarrel_C_73.Tags=True
+REINST_BP_ExplosiveBarrel_C_73.Cooking=True
+REINST_BP_ExplosiveBarrel_C_73.RadialForceComponent=True
+REINST_BP_ExplosiveBarrel_C_73.Impulse=True
+REINST_BP_ExplosiveBarrel_C_73.Force=True
+REINST_BP_ExplosiveBarrel_C_73.Destructible=True
+REINST_BP_ExplosiveBarrel_C_73.Activation=True
+REINST_BP_ExplosiveBarrel_C_73.HealthComponent=True
+REINST_BP_ExplosiveBarrel_C_73.Replication=True
+REINST_BP_ExplosiveBarrel_C_73.Input=True
+REINST_BP_ExplosiveBarrel_C_73.Actor=True
+REINST_BP_ExplosiveBarrel_C_73.Variable=True
+REINST_BP_ExplosiveBarrel_C_73.Sockets=True
+REINST_BP_ExplosiveBarrel_C_73.ComponentReplication=True
+REINST_BP_ExplosiveBarrel_C_73.Events=True
+REINST_BP_ExplosiveBarrel_C_77.Variable=True
+REINST_BP_ExplosiveBarrel_C_77.TransformCommon=True
+REINST_BP_ExplosiveBarrel_C_77.Sockets=True
+REINST_BP_ExplosiveBarrel_C_77.StaticMesh=True
+REINST_BP_ExplosiveBarrel_C_77.Materials=True
+REINST_BP_ExplosiveBarrel_C_77.Physics=True
+REINST_BP_ExplosiveBarrel_C_77.Collision=True
+REINST_BP_ExplosiveBarrel_C_77.Lighting=True
+REINST_BP_ExplosiveBarrel_C_77.Rendering=True
+REINST_BP_ExplosiveBarrel_C_77.Tags=True
+REINST_BP_ExplosiveBarrel_C_77.ComponentReplication=True
+REINST_BP_ExplosiveBarrel_C_77.Cooking=True
+REINST_BP_ExplosiveBarrel_C_77.Events=True
+REINST_BP_ExplosiveBarrel_C_81.Variable=True
+REINST_BP_ExplosiveBarrel_C_81.TransformCommon=True
+REINST_BP_ExplosiveBarrel_C_81.Sockets=True
+REINST_BP_ExplosiveBarrel_C_81.StaticMesh=True
+REINST_BP_ExplosiveBarrel_C_81.Materials=True
+REINST_BP_ExplosiveBarrel_C_81.Physics=True
+REINST_BP_ExplosiveBarrel_C_81.Collision=True
+REINST_BP_ExplosiveBarrel_C_81.Lighting=True
+REINST_BP_ExplosiveBarrel_C_81.Rendering=True
+REINST_BP_ExplosiveBarrel_C_81.Tags=True
+REINST_BP_ExplosiveBarrel_C_81.ComponentReplication=True
+REINST_BP_ExplosiveBarrel_C_81.Cooking=True
+REINST_BP_ExplosiveBarrel_C_81.Events=True
+REINST_BP_ExplosiveBarrel_C_85.Variable=True
+REINST_BP_ExplosiveBarrel_C_85.TransformCommon=True
+REINST_BP_ExplosiveBarrel_C_85.Sockets=True
+REINST_BP_ExplosiveBarrel_C_85.StaticMesh=True
+REINST_BP_ExplosiveBarrel_C_85.Materials=True
+REINST_BP_ExplosiveBarrel_C_85.Physics=True
+REINST_BP_ExplosiveBarrel_C_85.Collision=True
+REINST_BP_ExplosiveBarrel_C_85.Lighting=True
+REINST_BP_ExplosiveBarrel_C_85.Rendering=True
+REINST_BP_ExplosiveBarrel_C_85.Tags=True
+REINST_BP_ExplosiveBarrel_C_85.ComponentReplication=True
+REINST_BP_ExplosiveBarrel_C_85.Cooking=True
+REINST_BP_ExplosiveBarrel_C_85.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Objects/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher
-OpenAssetsAtExit=/Game/Objects/Weapons/BP_Shotgun.BP_Shotgun
-OpenAssetsAtExit=/Game/Objects/Projectiles/BP_GrenadeProjectile.BP_GrenadeProjectile
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4994,7 +5078,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Objects/Projectiles
+ContentBrowserTab1.SelectedPaths=/Game/Objects/Characters
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5172,9 +5256,9 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -5331,6 +5415,7 @@ REINST_BP_PlayerPawn_C_103="\"Object.Components.camera.Object.PostProcess.PostPr
 REINST_BP_PlayerPawn_C_109="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/GameModes/BP_EQSTestingPawn.BP_EQSTestingPawn;
 RecentlyPlaced=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer;
@@ -5350,29 +5435,28 @@ RecentlyPlaced=/Game/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup;
 RecentlyPlaced=/Game/Powerups/Pickup/BP_PowerupPickup.BP_PowerupPickup;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
-RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/Projectiles/BP_GrenadeProjectile
-MRUItem1=/Game/Objects/Weapons/BP_Shotgun
-MRUItem2=/Game/Objects/Weapons/BP_GrenadeLaucnher
-MRUItem3=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
-MRUItem4=/Game/Objects/Powerups/VisualEffects/sunflare
-MRUItem5=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
-MRUItem6=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
-MRUItem7=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
-MRUItem8=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
-MRUItem9=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
-MRUItem10=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
-MRUItem11=/Game/Objects/Powerups/Pickup/BP_PowerupPickup
-MRUItem12=/Game/Objects/Powerups/Pickup/BP_TestPickup
-MRUItem13=/Game/Objects/Powerups/BP_SuperSpeedPowerup
-MRUItem14=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
-MRUItem15=/Game/Objects/Powerups/SoundEffects/Pickup_powerup
-MRUItem16=/Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem17=/Game/Objects/Characters/Animations/AnimStarterPack/Reload_Rifle_Hip
-MRUItem18=/Game/Objects/Characters/Animations/AnimStarterPack/Fire_Shotgun_Hip
-MRUItem19=/Game/Objects/Characters/Animations/AnimStarterPack/Hit_React_1
+MRUItem0=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem1=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem2=/Game/Objects/Projectiles/BP_GrenadeProjectile
+MRUItem3=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem4=/Game/Objects/Weapons/BP_Shotgun
+MRUItem5=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem6=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
+MRUItem7=/Game/Objects/Powerups/VisualEffects/sunflare
+MRUItem8=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
+MRUItem9=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
+MRUItem10=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
+MRUItem11=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
+MRUItem12=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
+MRUItem13=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
+MRUItem14=/Game/Objects/Powerups/Pickup/BP_PowerupPickup
+MRUItem15=/Game/Objects/Powerups/Pickup/BP_TestPickup
+MRUItem16=/Game/Objects/Powerups/BP_SuperSpeedPowerup
+MRUItem17=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
+MRUItem18=/Game/Objects/Powerups/SoundEffects/Pickup_powerup
+MRUItem19=/Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
