Explosive barrel now damage other barrels.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.12-02.42.49
+CoopGame.TimeStamp=2020.05.12-02.52.27
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -5046,6 +5046,7 @@ REINST_BP_ExplosiveBarrel_C_85.Events=True
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel.BP_ExplosiveBarrel
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5437,8 +5438,8 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem1=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem0=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem1=/Game/Objects/Characters/BP_PlayerPawn
 MRUItem2=/Game/Objects/Projectiles/BP_GrenadeProjectile
 MRUItem3=/Game/Objects/TrackerBot/BP_TrackerBot
 MRUItem4=/Game/Objects/Weapons/BP_Shotgun
