An extra wire connected in blueprint caused that double the actors were spawned.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.12-02.52.27
+CoopGame.TimeStamp=2020.05.12-03.53.46
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -5042,11 +5042,23 @@ REINST_BP_ExplosiveBarrel_C_85.Tags=True
 REINST_BP_ExplosiveBarrel_C_85.ComponentReplication=True
 REINST_BP_ExplosiveBarrel_C_85.Cooking=True
 REINST_BP_ExplosiveBarrel_C_85.Events=True
+REINST_BP_MachineGun_AI_C_65.Tick=True
+REINST_BP_MachineGun_AI_C_65.Weapon=True
+REINST_BP_MachineGun_AI_C_65.Rendering=True
+REINST_BP_MachineGun_AI_C_65.Replication=True
+REINST_BP_MachineGun_AI_C_65.Input=True
+REINST_BP_MachineGun_AI_C_65.Actor=True
+REINST_BP_MachineGun_AI_C_69.Tick=True
+REINST_BP_MachineGun_AI_C_69.Weapon=True
+REINST_BP_MachineGun_AI_C_69.Rendering=True
+REINST_BP_MachineGun_AI_C_69.Replication=True
+REINST_BP_MachineGun_AI_C_69.Input=True
+REINST_BP_MachineGun_AI_C_69.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel.BP_ExplosiveBarrel
+OpenAssetsAtExit=/Game/GameModes/BP_TestGameMode.BP_TestGameMode
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5079,7 +5091,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Objects/Characters
+ContentBrowserTab1.SelectedPaths=/Game/GameModes
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5285,7 +5297,7 @@ REINST_BP_PlayerPawn_C_32="\"Object.Character.Mesh.Object.Collision.BodyInstance
 PainCausingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 BP_ExplosiveBarrel_C=
@@ -5385,7 +5397,7 @@ REINST_BP_AIPlayer_C_133="\"Object.Components.camera.Object.PostProcess.PostProc
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode=
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 EnvQueryGenerator_Donut="\"Object.Generator.ProjectionData\" "
 EnvQueryTest_Trace="\"Object.Trace.TraceData\" "
@@ -5393,7 +5405,7 @@ EnvQueryTest="\"Object.Trace.TraceData\" "
 REINST_BP_PlayerPawn_C_227="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_AIPlayer_C_231="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BTTask_RunEQSQuery="\"Object.EQS.EQSRequest\" "
-BTTask_BlackboardBase="\"Object.EQS.EQSRequest\" "
+BTTask_BlackboardBase=
 BTTaskNode=
 BTNode=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
@@ -5438,26 +5450,26 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem1=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem2=/Game/Objects/Projectiles/BP_GrenadeProjectile
-MRUItem3=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem4=/Game/Objects/Weapons/BP_Shotgun
-MRUItem5=/Game/Objects/Weapons/BP_GrenadeLaucnher
-MRUItem6=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
-MRUItem7=/Game/Objects/Powerups/VisualEffects/sunflare
-MRUItem8=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
-MRUItem9=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
-MRUItem10=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
-MRUItem11=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
-MRUItem12=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
-MRUItem13=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
-MRUItem14=/Game/Objects/Powerups/Pickup/BP_PowerupPickup
-MRUItem15=/Game/Objects/Powerups/Pickup/BP_TestPickup
-MRUItem16=/Game/Objects/Powerups/BP_SuperSpeedPowerup
-MRUItem17=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
-MRUItem18=/Game/Objects/Powerups/SoundEffects/Pickup_powerup
-MRUItem19=/Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem0=/Game/GameModes/BP_TestGameMode
+MRUItem1=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem2=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem3=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem4=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem5=/Game/Objects/Projectiles/BP_GrenadeProjectile
+MRUItem6=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem7=/Game/Objects/Weapons/BP_Shotgun
+MRUItem8=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem9=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
+MRUItem10=/Game/Objects/Powerups/VisualEffects/sunflare
+MRUItem11=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
+MRUItem12=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
+MRUItem13=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
+MRUItem14=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
+MRUItem15=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
+MRUItem16=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
+MRUItem17=/Game/Objects/Powerups/Pickup/BP_PowerupPickup
+MRUItem18=/Game/Objects/Powerups/Pickup/BP_TestPickup
+MRUItem19=/Game/Objects/Powerups/BP_SuperSpeedPowerup
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
