--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.12-03.53.46
+CoopGame.TimeStamp=2020.05.12-04.33.13
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -5054,12 +5054,17 @@ REINST_BP_MachineGun_AI_C_69.Rendering=True
 REINST_BP_MachineGun_AI_C_69.Replication=True
 REINST_BP_MachineGun_AI_C_69.Input=True
 REINST_BP_MachineGun_AI_C_69.Actor=True
+Pawn.TransformCommon=True
+Pawn.Pawn=True
+Pawn.Camera=True
+Pawn.Rendering=True
+Pawn.Replication=True
+Pawn.Input=True
+Pawn.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Objects/TrackerBot/BP_TrackerBot.BP_TrackerBot
-OpenAssetsAtExit=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel.BP_ExplosiveBarrel
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5092,7 +5097,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Objects/TrackerBot
+ContentBrowserTab1.SelectedPaths=/Game/Objects/Characters
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
